tests/typing/bad/testfile-redef-8.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void malloc() {}
int main() {}
